# vomit

./: README.md  makefile  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/vomit/: __init__.py  __main__.py
tests/: test_walker.py
