[metadata]
name = vomit
description = "Somewhat unintelligible"
author = bhmt
version = 0.1.0
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    vomit
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=6.0.0
    mypy>=1.3.0
    pytest>=7.3.1
    pytest-cov>=4.1.0
    tox>=4.6.0


[options.package_data]
vomit = py.typed

[flake8]
max-line-length = 120